Work around for fixing Kendo flickering issue that happens only in Chrome for few people.
Fore more details, refer below thread

http://kendoui-feedback.telerik.com/forums/127393-kendo-ui-feedback/suggestions/31617025-kendo-not-support-in-chrome-latest-version-it-get

git-tfs-id: [https://tfs-fm-04.devtools.intel.com/tfs/DefaultCollection_TFS04]$/RDMS/MyDeals/MyDeals_Release/UI/main;C1449168

--- a/Intel.MyDeals/css/kendo.intel.css
+++ b/Intel.MyDeals/css/kendo.intel.css
@@ -6303,6 +6303,10 @@ UL.k-multicheck-wrap LI LABEL INPUT, UL.k-menu-group LI SPAN.k-link INPUT {
     right: .3rem;
 }
 
+.k-overlay {
+    -webkit-backface-visibility: hidden;
+} 
+
 
 
 
